restore schema model files from bad merge, minor changes